<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/center_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/restart_button"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:padding="16dp"
                android:src="@drawable/ic_restore_black" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/basket_ball"
                android:textColor="@color/text_black"
                android:textSize="60sp"
                tools:text="62" />

            <ImageButton
                android:id="@+id/results_button"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:padding="16dp"
                android:src="@drawable/ic_arrow_right_black" />
        </LinearLayout>

        <TextView
            android:id="@+id/local_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:text="@string/local"
            android:textColor="@color/text_black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/visitor_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:text="@string/visitor"
            android:textColor="@color/text_black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/center_layout"
            android:layout_below="@id/local_text"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/local_minus_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus_one"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/local_score_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/zero"
                android:textColor="@color/text_black"
                android:textSize="72sp"
                tools:text="62" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/local_plus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plus_one"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/local_two_points_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plus_two"
                    android:textSize="24sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/visitor_text"
            android:layout_below="@id/center_layout"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/visitor_minus_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus_one"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/visitor_score_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/zero"
                android:textColor="@color/text_black"
                android:textSize="72sp"
                tools:text="48" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/visitor_plus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plus_one"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/visitor_two_points_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plus_two"
                    android:textSize="24sp" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</layout>